[gd_scene load_steps=2 format=3 uid="uid://c2ir8tsp3c3u1"]

[ext_resource type="Script" uid="uid://dw5dkj0sklp58" path="res://Levels/atb_test.gd" id="1_hf3pe"]

[node name="AtbTest" type="Node2D"]
script = ExtResource("1_hf3pe")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="CanvasLayer/Control/Panel"]
anchors_preset = 0
offset_top = 108.0
offset_right = 1147.0
offset_bottom = 183.0

[node name="Label" type="Label" parent="CanvasLayer/Control/Panel/Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.261552
anchor_bottom = 0.52
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 40
text = "Sequenziale"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="CanvasLayer/Control/Panel/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.307759
anchor_right = 0.569311
anchor_bottom = 0.52
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 16
metadata/_edit_use_anchors_ = true

[node name="Control2" type="Control" parent="CanvasLayer/Control/Panel"]
layout_mode = 3
anchors_preset = 0
offset_top = 174.0
offset_right = 1147.0
offset_bottom = 249.0

[node name="Label" type="Label" parent="CanvasLayer/Control/Panel/Control2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.261552
anchor_bottom = 0.52
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 40
text = "Esecuzione:"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="CanvasLayer/Control/Panel/Control2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.307759
anchor_right = 0.569311
anchor_bottom = 0.52
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 40
metadata/_edit_use_anchors_ = true

[node name="Control3" type="Control" parent="CanvasLayer/Control/Panel"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="CanvasLayer/Control/Panel/Control3"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.261552
anchor_bottom = 0.52
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 40
text = "Ready"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="CanvasLayer/Control/Panel/Control3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.307759
anchor_right = 0.569311
anchor_bottom = 0.52
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 16
metadata/_edit_use_anchors_ = true

[connection signal="atb_reset_for" from="." to="." method="_on_atb_reset_for"]
[connection signal="execute_queue_ready" from="." to="." method="_on_execute_queue_ready"]
