[gd_scene load_steps=15 format=3 uid="uid://dp2jyxwg8jyua"]

[ext_resource type="PackedScene" uid="uid://ds18732su6wes" path="res://Characters/Player.tscn" id="1_by263"]
[ext_resource type="Script" uid="uid://dw5dkj0sklp58" path="res://Levels/atb_test.gd" id="1_rjq0v"]
[ext_resource type="Script" uid="uid://bdlehcl3lidfq" path="res://EnemyUnit.gd" id="3_djt3n"]
[ext_resource type="Script" uid="uid://c2gho0vch6y0x" path="res://Skills/skill.gd" id="3_oepju"]
[ext_resource type="Resource" uid="uid://to0beeny7py6" path="res://Skills/fire_ball.tres" id="4_22ls6"]
[ext_resource type="Script" uid="uid://c4j46qhjybeu0" path="res://Levels/camera_manager.gd" id="4_yj5mf"]
[ext_resource type="Resource" uid="uid://p60krt1soeox" path="res://Skills/water_ball.tres" id="5_22ls6"]
[ext_resource type="FontFile" uid="uid://trrep4u0oprq" path="res://Assets/fonts/MedievalSharp/MedievalSharp-Regular.ttf" id="7_mc8pu"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_rjq0v"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_djt3n"]
sky_material = SubResource("ProceduralSkyMaterial_rjq0v")

[sub_resource type="Environment" id="Environment_yj5mf"]
background_mode = 2
sky = SubResource("Sky_djt3n")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_22ls6"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mc8pu"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_djt3n"]

[node name="BattleArea" type="Node3D"]
script = ExtResource("1_rjq0v")

[node name="Pavimento" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
use_collision = true
size = Vector3(20, 0.5, 20)

[node name="Environment" type="Node" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_yj5mf")

[node name="PartyPosition" type="Node3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 7)

[node name="Player" parent="PartyPosition" instance=ExtResource("1_by263")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.09316, 0, 0)
unit_name = "Cloud"
max_haste = 40.0
max_strength = 300.0
max_mp = 20.0
moveset = Array[ExtResource("3_oepju")]([ExtResource("4_22ls6")])

[node name="Player2" parent="PartyPosition" instance=ExtResource("1_by263")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.58981, 0, 0)
unit_name = "Iginio Massari"
max_haste = 30.0
max_strength = 300.0
moveset = Array[ExtResource("3_oepju")]([ExtResource("5_22ls6")])

[node name="EnemiesPosition" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -7)

[node name="Enemy" parent="EnemiesPosition" instance=ExtResource("1_by263")]
script = ExtResource("3_djt3n")
unit_name = "Sephirot"
max_haste = 50.0
max_strength = 30.0

[node name="HumanBaseModel_001" parent="EnemiesPosition/Enemy/Model/DummyImproved/Armature/Skeleton3D" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_22ls6")

[node name="Enemy2" parent="EnemiesPosition" instance=ExtResource("1_by263")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.96357, 0, 0)
script = ExtResource("3_djt3n")
unit_name = "RAMONO"
max_haste = 50.0
max_strength = 40.0

[node name="HumanBaseModel_001" parent="EnemiesPosition/Enemy2/Model/DummyImproved/Armature/Skeleton3D" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_mc8pu")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_djt3n")

[node name="CharacterPanel" type="Panel" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -224.0
offset_right = 283.0
offset_bottom = -184.0
grow_vertical = 0

[node name="CharacterName" type="Label" parent="CanvasLayer/Control/Panel/CharacterPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_mc8pu")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChoiceBox" type="VBoxContainer" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -171.0
offset_right = 280.0
grow_vertical = 0

[node name="AttackButton" type="Button" parent="CanvasLayer/Control/Panel/ChoiceBox"]
layout_mode = 2
text = "Attacca"

[node name="DefendButton" type="Button" parent="CanvasLayer/Control/Panel/ChoiceBox"]
layout_mode = 2
text = "Difendi"

[node name="SkillButton" type="Button" parent="CanvasLayer/Control/Panel/ChoiceBox"]
layout_mode = 2
text = "Abilit√°"

[node name="ItemButton" type="Button" parent="CanvasLayer/Control/Panel/ChoiceBox"]
layout_mode = 2
text = "Oggetti
"

[node name="FleeButton" type="Button" parent="CanvasLayer/Control/Panel/ChoiceBox"]
layout_mode = 2
text = "Fuga
"

[node name="TargetBox" type="ItemList" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -176.0
offset_right = 140.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
auto_width = true
auto_height = true

[node name="SkillBox" type="ItemList" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -176.0
offset_right = 140.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
auto_width = true
auto_height = true
item_count = 1
fixed_icon_size = Vector2i(10, 10)

[node name="PartyHUD" type="Panel" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -368.0
offset_top = -196.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Panel/PartyHUD"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Cinema" type="Node" parent="."]
script = ExtResource("4_yj5mf")

[node name="MainCamera" type="Camera3D" parent="Cinema"]
transform = Transform3D(-3.09086e-08, -0.707107, 0.707107, -3.09086e-08, 0.707107, 0.707107, -1, 0, -4.37114e-08, 6.69021, 7.34457, -0.118853)

[node name="RotateCameraPivot" type="Node3D" parent="Cinema"]

[node name="RotateCamera" type="Camera3D" parent="Cinema/RotateCameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.960011, 0.279963, 0, -0.279963, 0.960011, 0, 6.14782, 9.69629)

[editable path="EnemiesPosition/Enemy"]
[editable path="EnemiesPosition/Enemy2"]
